SPA assignment CSS isn't fully working on all pages

--- a/Survey.html
+++ b/Survey.html
@@ -23,4 +23,13 @@
 </form>
 
 </body>
+
+<footer>
+  <nav class="menu">
+    <a href="index.html">Home</a>
+    <a href="About.html">About Me</a>
+    <a href="Survey.html">Survey</a>
+
+</nav>
+</footer>
 </html>
