Made a lot of changes according to Jira ticket. About page needs work still

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
 
 <body>
-  <h1 id="Title">Rashad Hubbard</h1>
+  <!-- <h1 id="Title">Rashad Hubbard</h1>
   <h2 class="Headers">A little about me</h2>
 <p>Hey there! My name is Rashad Hubbard. I'm happy that you ran into this web application!</p>
 
@@ -15,12 +18,14 @@
     There are a large variety of game types that exist in the world. This parry trainer exists to help with reaction time.
     In certain games, and probably other examples outside of gaming, the ability to look at something happening and to click
     a button at the appropriate time is important. Gaming examples will be something like the God of War series, Furi, Sifu,
-    and plenty of other games.</p>
+    and plenty of other games.</p> -->
 
+    <div id="root"></div>
+  <script type="module" src="index.js"></script>
 
 </body>
 
-<footer>
+<!-- <footer>
   <nav class="menu">
 
       <a href="index.html">Home</a>
@@ -29,6 +34,6 @@
 
   </nav>
 
-</footer>
+</footer> -->
 
 </html>
